--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,13 @@ before_install:
 script:
   - docker run -e CI=true mparaskakis/docker-react npm run test -- --coverage
 
-before_deploy:
-  - rvm 1.9.3 do gem install aws-sdk -v 2.1.36
-
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-us-east-2-530114946190"
+  bucket: "elasticbeanstalk-us-east-2-530114946190"
+  edge: true
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
